// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds follow views fetches followers 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "eve.test",
      "viewer": Object {
        "followedBy": "record(1)",
        "following": "record(0)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "dan.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(6)",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(9)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(8)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(7)",
        "following": "record(6)",
      },
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "viewer": Object {},
  },
}
`;

exports[`pds follow views fetches followers 2`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "dan.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "bob.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches followers 3`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "eve.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(6)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "carol.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches followers 4`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "dan.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches followers 5`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "dan.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "eve.test",
      "viewer": Object {
        "followedBy": "record(1)",
        "following": "record(0)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "dan.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(6)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(9)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(8)",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(7)",
        "following": "record(6)",
      },
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "viewer": Object {},
  },
}
`;

exports[`pds follow views fetches follows 2`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "bob.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 3`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "carol.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 4`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "eve.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(6)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "dan.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 5`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(2)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(4)",
      "handle": "alice.test",
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;
